@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.confluence.lite.mod"
-  version="1.0.2"
+  version="1.0.3"
   name="Confluence Lite Mod"
   provider-name="Mudislander">
   <requires>
